examples/test/testpolicy19973.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19973
  namespace: namespace183
spec:
  podSelector:
    matchLabels:
      key8: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value0
          key1: value13
          key9: value26
      podSelector:
        matchLabels:
          key20: value33
